--- a/client-app/package.json
+++ b/client-app/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
     "react-router-dom": "^6.22.2",
+    "react-textarea-autosize": "^8.5.5",
     "react-toastify": "^10.0.5",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^3.0.0-beta.2",
