--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "editor.wordWrapColumn": 50,
   "editor.wordWrap": "off",
   "editor.inlayHints.maximumLength": 30,
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "typescript.tsserver.enableTracing": true
 }
